chore: Prettier, ESLint 설치 및 설정 추가

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "tsc -b && next lint",
+    "lint:fix": "tsc -b && next lint --fix"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.82.0",
@@ -16,15 +19,26 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.21.0",
+    "@next/eslint-plugin-next": "^15.3.4",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.3.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.9.0",
+    "prettier": "^3.5.3",
     "sass": "^1.89.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.24.1"
   }
 }
