--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "tsc -b && next lint",
-    "lint:fix": "tsc -b && next lint --fix"
+    "lint:fix": "tsc -b && next lint --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.82.0",
@@ -22,29 +24,40 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.21.0",
     "@next/eslint-plugin-next": "^15.3.4",
+    "@storybook/addon-a11y": "^9.0.17",
+    "@storybook/addon-docs": "^9.0.17",
+    "@storybook/addon-vitest": "^9.0.17",
+    "@storybook/nextjs-vite": "^9.0.17",
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.73.3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.3.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^9.0.17",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.9.0",
     "lefthook": "^1.12.2",
+    "playwright": "^1.54.1",
     "prettier": "^3.5.3",
     "sass": "^1.89.2",
+    "storybook": "^9.0.17",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.24.1"
+    "typescript-eslint": "^8.24.1",
+    "vitest": "^3.2.4"
   }
 }
