--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.9.0",
     "lefthook": "^1.12.2",
+    "msw": "^2.7.5",
+    "msw-storybook-addon": "^2.0.4",
     "playwright": "^1.54.1",
     "prettier": "^3.5.3",
     "sass": "^1.89.2",
