--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
     "typescript": "^5",
     "typescript-eslint": "^8.24.1",
     "vitest": "^3.2.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
