--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "chromatic": "^13.1.2",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.3.4",
     "eslint-config-prettier": "^10.1.8",
