--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.21.0",
+    "@iconify/react": "^6.0.0",
     "@next/eslint-plugin-next": "^15.3.4",
     "@storybook/addon-a11y": "^9.0.17",
     "@storybook/addon-docs": "^9.0.17",
