--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.82.0",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
@@ -60,6 +64,7 @@
     "sass": "^1.89.2",
     "storybook": "^9.0.17",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5",
     "typescript-eslint": "^8.24.1",
     "vitest": "^3.2.4"
