fix: cva 파라미터에서 Tailwind Intellisense 안 되던 점 해소

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "typescriptreact": "javascript"
   },
   "tailwindCSS.experimental.classRegex": [
-    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
+    ["(?<=cva\\([\\s\\S]*?)[\"']([^\"']+)[\"']"], // @see https://github.com/tailwindlabs/tailwindcss-intellisense/issues/1032#issuecomment-2575812786
     ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"],
     ["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
   ],
