fix: 커스텀 text, border class 자동 완성 되게

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "**/node_modules/**",
     "**/.next/**"
   ],
+  "tailwindCSS.experimental.configFile": "./app/globals.css", // NOTE: 루트 폴더 기준 상대 경로
   "[javascript]": {
     "editor.defaultFormatter": null
   },
