chore: TailwindCSS Class 정렬 포매팅 추가

--- a/.prettierrc
+++ b/.prettierrc
@@ -18,5 +18,10 @@
     "^(@/(.*)$)",
     "^[./]"
   ],
-  "plugins": ["@trivago/prettier-plugin-sort-imports"]
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ],
+  "tailwindStylesheet": "./app/globals.css",
+  "tailwindFunctions": ["clsx", "cn", "cva", "cx"]
 }
