--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "msw-storybook-addon": "^2.0.4",
     "playwright": "^1.54.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "sass": "^1.89.2",
     "storybook": "^9.0.17",
     "tailwindcss": "^4",
