fix: lefthook에서 pnpm 호출하던 점 yarn으로 수정

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,6 +1,6 @@
 commit-msg:
   jobs:
-    - run: pnpm exec commitlint --edit {1}
+    - run: npx commitlint --edit {1}
       stage_fixed: true
 
 pre-commit:
@@ -9,11 +9,11 @@ pre-commit:
     - run: node scripts/lint-with-file-prefix.js {staged_files}
       glob: '*.{js,jsx,ts,tsx}'
       stage_fixed: true
-    - run: pnpm exec prettier --check {staged_files}
+    - run: yarn prettier --check {staged_files}
       glob: '*.{css,json,md}'
       stage_fixed: true
 
 pre-push:
   jobs:
-    - run: pnpm build
+    - run: yarn build
       stage_fixed: true
