--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "tsc -b && next lint",
     "lint:fix": "tsc -b && next lint --fix",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "generate-api": "orval"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
@@ -36,6 +37,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.21.0",
+    "@faker-js/faker": "^9.9.0",
     "@iconify/react": "^6.0.0",
     "@next/eslint-plugin-next": "^15.3.4",
     "@storybook/addon-a11y": "^9.0.17",
@@ -63,6 +65,7 @@
     "lefthook": "^1.12.2",
     "msw": "^2.7.5",
     "msw-storybook-addon": "^2.0.4",
+    "orval": "^7.11.1",
     "playwright": "^1.54.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
